fixed some minor bugs with tabs on mobile

--- a/src/components/CSS/App.css
+++ b/src/components/CSS/App.css
@@ -161,16 +161,24 @@ a{
 }
 #tabSection{
   height: 100vh;
-  padding: -100px 0 0 0;
   top: calc(max(200vh, 1000px) - 50px);
   width: 100%;
   position: absolute;
   z-index: 2;
 }
+.tabHolder{
+  position: absolute;
+  width: 100%;
+  height: 200%;
+  bottom: 0;
+  overflow: hidden;
+  pointer-events: none;
+}
 .tab{
   position: absolute;
-  height: 100%;
+  height: 50%;
   width: 100%;
+  bottom: 0;
   pointer-events: none;
   transform-origin: 0 50px;
   transform: rotateZ(0deg) translateX(0px);
@@ -208,6 +216,7 @@ a{
   animation: tabMorph 1s linear 1;
   animation-play-state: paused;
   pointer-events: all;
+  cursor: pointer;
 }
 @keyframes tabMorph{
   100%     { clip-path: polygon(0 100%, 6% 96%, 11% 83%, 12% 75%, 15% 21%, 17% 11%, 20% 3%, 25% 0, 75% 0, 80% 3%, 83% 11%, 85% 21%, 88% 75%, 89% 83%, 94% 96%, 100% 100%); }
